--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -13,7 +13,7 @@
   "stakingTotal": "Staking Total",
   "aboutKhala": "About Khala",
   "aboutKhalaLink": "https://phala.network/khala",
-  "learnSlotAuction": "Learn Slot Auction",
+  "learnSlotAuction": "Khala's Auction Strategy",
   "learnSlotAuctionLink": "https://medium.com/phala-network/phalas-kusama-slot-auction-strategy-34cb93e07f3a",
   "affiliationProgram": "Affiliation Program",
   "connectWallet": "Connect Wallet",
@@ -75,78 +75,78 @@
   "isAlreadySubscribed": "Email is already subscribed",
   "copySuccess": "Copy Success",
   "landingPageTitle": "Khala's Crowdloan Dapp is Coming!",
-  "landingPageDescription": "Please bookmark this page, Khala will open Crowdloan on this page when the second Kusama slot is released.",
+  "landingPageDescription": "Please bookmark this page! Khala will open the Crowdloan on this page when the second Kusama slot is released.",
   "landingPageReferralRewards": "Referral Rewards",
   "subscribeToOurCrowdloanNews": "Subscribe to our Crowdloan news",
   "basicRewards": "Basic Rewards",
   "basicRewardsText": "In Khala’s crowdloan, every KSM that supports Khala in the Kusama slot auction through the Crowdloan will be entitled to 100 PHA as rewards (PHA: KSM = 100:1).",
   "referralRewards": "Referral Rewards",
-  "referralRewardsConnect": "Connect Kusama First",
+  "referralRewardsConnect": "Connect Kusama Wallet First",
   "referralRewardsText": "There is an additional reward available for Referrals. If a Crowdloan participant invites an additional participant who makes an additional contribution, they will each receive an additional reward: an extra 0.5% on the additional contribution.",
-  "referralRewardsFirst": "First, you can Bond your referrals, when you help Khala to win the auction, you will get a additional reward equivalent to 0.5% of your support reward.",
+  "referralRewardsFirst": "You can immediately Bond a referred friend's addresses, and when we win the auction, you will each get an additional 0.5% on the friend's reward.",
   "yourReferralsKusamaAddress": "Your referrals' Kusama Address",
-  "referralRewardsSecond": "Second, you can invite others to help Khala, if Khala wins, you will get an additional reward equivalent to 0.5% of your friend’s support reward. there is no limit to how many accounts you invite.",
+  "referralRewardsSecond": "You can also invite others to help Khala. When we win, you'll each get an additional reward of 0.5% on your friend’s contribution. There is no limit to how many friends you invite.",
   "bond": "Bond",
   "Fee": "Fee",
   "insufficientFee": "insufficient fee",
-  "tweetToTellYourFriend": "Tweet to tell your friend",
+  "tweetToTellYourFriend": "Tweet to the world!",
   "generateMyReferalLink": "Generate my referal link",
   "yourReferrerCannotBeYourself": "your referrer cannot be yourself",
   "process": "Process",
   "processT1": "Prep your KSM",
-  "processC1": "Unbond your KSM soon if they’re already bonded! (At least 7 days before the Crowdloan starts).",
+  "processC1": "Unbond your KSM soon if they’re already bonded! (At least 7 days before the Crowdloan starts.)",
   "processT2": "The 2nd slot",
-  "processC2": "Khala Network will join the Kusama slot auction when the second slot is released. when the 2nd slot begins, you can join on this page.",
-  "processT3": "Khala win auction",
-  "processC3": "When Khala wins a slot and runs as parachain successfully, 34% of the PHA in the reward pool will be vested to contributors’ addresses immediately. The remaining 66% will be vested monthly over 11 months.",
+  "processC2": "Khala Network will join the slot auction when the second slot is released. As soon as the 2nd slot opens, you can join on this page.",
+  "processT3": "Khala wins auction",
+  "processC3": "When Khala wins a slot and runs as parachain successfully, 34% of the PHA in the reward pool will vest and go to contributors’ addresses immediately. The remaining 66% will vest monthly over 11 months.",
   "processT4": "Unlock KSM",
-  "processC4": "If Khala wins, Crowdloaned KSM will be unlocked at the end of the lease period (48 weeks from the auction Khala wins).",
+  "processC4": "If Khala wins, Crowdloaned KSM will be unlocked at the end of the lease period (48 weeks from the auction date.)",
   "waysToSupport": "Ways to support",
   "crowdloanDappThisPage": "Crowdloan Dapp (This Page)",
   "toBeAnnounced": "To be announced",
-  "q1": "What is Kusama Parachain Slot Auctions？",
-  "a1-1": "The Kusama Network is composed of a relay chain and a number of parachains. The slot is the interface between the parachain and the relay chain. The number is limited, and the project needs to be obtained through KSM bidding.",
-  "a1-2": "The auction adopts an improved “candle auction“, that is, the first 2 days are the Open Period, and the next 5 days are the Ending Period. The auction may end at any time during the Ending period. Only the item with the highest bid before the end of the auction will win. It is estimated that each auction will last 7 days and there will be 5 auctions in total.",
-  "a1-3": "The Polkadot Slot Auction that will start in the future is similar. The project bids DOT to bid for the slots, but the bidding time, bidding period, and number of slots are different from Kusama.",
-  "q2": "Why does Khala bid for Parachain Slots?",
-  "a2": "After obtaining the slot, Khala will be able to share the security and consensus of the Kusama network, and can communicate with other parachains.",
-  "q3": "Why does Khala create a KSM Crowdloan?",
-  "a3": "Crowdloan is a way for Khala to obtain the KSM required by the auction, and it is an important part of Khala's launch in Kusama. Khala does not need to spend too much resources to obtain the funds for the lease of the slot. At the same time, it can effectively distribute tokens to community who support Khala and complete the fair distribution of tokens.",
+  "q1": "What are Kusama Parachain Slot Auctions？",
+  "a1-1": "The Kusama Network is composed of a relay chain and multiple parachains (parallel chains). A slot is the interface between a parachain and the relay chain. The number of slots is limited and they are allocated via KSM bidding auctions. ",
+  "a1-2": "The auction follows a modified \"candle auction.\" The first 2 days are an Open Period, and the next 5 days are an Ending Period. The auction will end at a random time during the Ending Period. The highest bidder at that random time is the winner. We expect there will be 5 auctions scheduled with about 7 days between auctions.",
+  "a1-3": "Similar Polkadot Slot Auctions will come in the future where projects will bids DOT for slots, but the bidding time, bidding period, and number of slots will be different from Kusama.",
+  "q2": "Why is Khala bidding for a Slot?",
+  "a2": "By having a slot, Khala will be able to share in the security and consensus of the Kusama network and will gain on-chain communication with other parachains.",
+  "q3": "Why is Khala running a KSM Crowdloan?",
+  "a3": "The Crowdloan is a way for Khala's community to provide the KSM required to win an auction, and is an important part of Khala's launch in Kusama. It means the project can avoid selling many PHA to raise KSM for slot leases. At the same time, it's an opportunity to efficiently distribute PHA to those in the community who support Khala, which is part of the planned fair distribution of tokens.",
   "q4": "Why should I participate in Khala's Crowdloan?",
-  "a4": "Crowdloan is a low-cost way to obtain K-PHA tokens. You only need to lock the KSM for a fixed period of time, and you don't need to spend any money to get K-PHA tokens. 1 KSM can get 100 K-PHA.",
-  "q5": "What is the process of Khala Parachain Slot auction?",
-  "a5-1": "1. You need to prepare KSM in advance. It takes 7 days to unlock KSM to take effect;",
-  "a5-2": "2. Users can register and invite friends through the invitation link;",
-  "a5-3": "3. The first slot of Kusama Parachain is open for bidding;",
-  "a5-4": "4. The second slot is open for bidding, Khala Crowdloan is created, and users can contribute KSM for Khala;",
-  "a5-5": "5. Khala successfully take the second slot;",
-  "a5-6": "6. Khala launch Kusama Parachain. ",
+  "a4": "The Crowdloan is a low-cost way to obtain K-PHA tokens (exchangeable for PHA). Each 1 KSM you Crowdloan will get you 100 K-PHA. Your KSM is locked for a fixed period of time and then is spendable again, so you don't need to spend any money to get K-PHA. ",
+  "q5": "What is Khala Parachain Slot auction process?",
+  "a5-1": "1. You need to prepare your KSM by unlocking it in advance. It takes 7 days for your unlock to take effect.",
+  "a5-2": "2. Users can register and invite friends through an invitation link.",
+  "a5-3": "3. We are not participating in the the first Kusama slot auction.",
+  "a5-4": "4. Staring with the second Kusama slot open for bidding, the Khala Crowdloan will be created and users can contribute KSM for Khala.",
+  "a5-5": "5. Khala wins a slot!",
+  "a5-6": "6. Khala launches as a Kusama Parachain.",
   "q6": "When will Khala's crowdloan start?",
-  "a6": "Khala will create the crowdloan when the second slot starts to auction, at this time you can start to contribute KSM for Khala. The end time of the crowdloan will be determined by Khala's auction situation. During the auction, your KSM will be locked.",
+  "a6": "Khala will create the Crowdloan when the second slot is open for bidding, and that's the time you can start to contribute KSM for Khala. The end time of the Crowdloan will be determined by the result of the auctions. Your KSM will be locked during the auction, even though Khala has not yet won. It will be unlocked at the end of the auctions or at the end of the slot lease that Khala wins.",
   "q7": "Where can I participate in Khala crowd lending?",
-  "a7-1": "1. You can participate directly on this page (on-chain);",
-  "a7-2": "2. You can participate in cooperative institutions such as exchanges (off-chain);",
-  "a7-3": "3. You can participate directly through the polkadot.js UI (on-chain);",
-  "a7-4": "4. You can participate through a third-party DApp (on-chain). ",
-  "q8": "Whose account is the KSM I contributed locked to?",
-  "a8": "Your KSM will be locked in the control module of the Kusama relay chain through a special transaction. It is not transferred to the Khala account. You can still see this part of the funds in the account, and Khala will never be able to contact it.",
+  "a7-1": "1. You can participate directly on this page (on-chain).",
+  "a7-2": "2. You can participate through participating exchanges (off-chain).",
+  "a7-3": "3. You can participate directly through the polkadot.js UI (on-chain).",
+  "a7-4": "4. You can participate through a third-party DApp (on-chain).",
+  "q8": "Where do the KSM I contributed reside?",
+  "a8": "Your KSM will be locked in the control module of the Kusama relay chain through a special transaction. It is not transferred to a Khala account. You can still see these funds in the account, and Khala will never have access to it.",
   "q9": "How long will my KSM be locked?",
-  "a9": "In the Kusama Network, the parachain slot lease cycle is 8 periods, and each periods is 6 weeks. Khala will lease the longest period of 48 weeks. When Khala's bid is successful, your KSM will be locked for 48 weeks starting from Khala's auction of the slot. When the Khala bid fails, your KSM will be unlocked and refunded after the crowdloan ends.",
-  "q10": "How many K-PHA rewards can I get for participating in the Khala Crowdloan?",
-  "a10": "If the auction is successful, you will get 100 K-PHA as a reward for every KSM you contribute for Khala. A total of 15 million K-PHA will be released on a first-come, first-served basis. If the bid fails, there will be no reward.",
+  "a9": "In the Kusama Network, a parachain slot lease is up to 8 periods of 6 weeks each. Khala will go for the longest lease period of 48 weeks. When Khala's bid wins, your KSM will be locked for 48 weeks starting from Khala's win of the slot. If the Khala bid fails for all the slots being auctioned in this Crowdloan, your KSM will be unlocked and available as the Crowdloan ends.",
+  "q10": "How many K-PHA can I get as rewards for participating in the Khala Crowdloan?",
+  "a10": "If an auction is won, you will get 100 K-PHA as a reward for each KSM you contribute for Khala. A cap of up to 15 million K-PHA will be released on a first-come, first-served basis. If the bid fails, there will be no reward.",
   "q11": "What is the referral reward?",
-  "a11-1": "Khala will provide users with generous referral rewards. Before starting the auction, you can register in advance and bond the referral relationship with your friends. Once your friends lock KSM, you and your friends can get referral rewards.",
-  "a11-2": "Example: After user A invites user B to participate in the slot auction, both A and B will receive 0.5% of the support reward of user B as an additional invitation reward. ",
-  "q12": "How to receive rewards?",
-  "a12": "Rewards will be automatically distributed to your locked KSM account. Among them, 34% of the rewards will be released immediately after connecting to the parachain, and the remaining 66% of the rewards will be released linearly in 11 months.",
-  "q13": "Is there a limit on the maximum and minimum lock amount?",
-  "a13": "The single minimum lock amount is 0.1 KSM, and the maximum lock amount is 150,000 KSM cumulatively.",
-  "q14": "Can I make contribute multiple times?",
+  "a11-1": "Khala will grant users an additional 0.5% referral reward. Before starting the auction, you can register in advance and bond your referral relationship with your friends. Once your friends lock KSM for Khala, you and your friends can get referral rewards.",
+  "a11-2": "Example: After user A invites user B to participate in the slot auction, both A and B will receive an additional 0.5% of the support reward that user B would have received alone.",
+  "q12": "How do I receive rewards?",
+  "a12": "Rewards will be automatically distributed to your locked KSM account. The first 34% of your rewards will be released immediately after Khala connects as a parachain, and the remaining 66% of the rewards will be released monthly over the next 11 months.",
+  "q13": "Is there a maximum or minimum lock amount?",
+  "a13": "The single minimum lock amount is 0.1 KSM, and the maximum cumulative locked amount is 150,000 KSM.",
+  "q14": "Can I contribute multiple times?",
   "a14": "Yes",
   "q15": "What is the relationship between K-PHA and PHA?",
-  "a15": "K-PHA and PHA are the same token, which can be exchanged 1:1 after the Phala cross-chain bridge goes online. Because they are deployed in different blockchain networks, they have different names.",
-  "q16": "Where can I track the crowdloan situation?",
-  "a16": "After the crowdloan starts, you can see Khala's crowdloan quantity, crowd lenders, total rewards, current bidding situation and other information in this panel.",
+  "a15": "K-PHA (for Khala on Kusama) and PHA (for Phala on Polkadot) are the same token and will be exchangable 1:1 after the Phala cross-chain bridge goes online. Because they are deployed as native tokens in different blockchain networks, they have different names.",
+  "q16": "Where can I track Crowdloan status?",
+  "a16": "After the Crowdloan starts, you'll be able to see Khala's Crowdloan total, crowd lenders, total rewards, the current bidding situation, and other information, all on this page.",
   "alert": "Alert",
   "install": "Install",
   "pleaseInstallText": "Please install polkadot extension and restart browser"
