--- a/src/i18n/zh.json
+++ b/src/i18n/zh.json
@@ -149,5 +149,6 @@
   "a16": "众贷开始后，你可以在本面板中看到 Khala 的众贷数量、众贷人数、总获得奖励、当前竞拍情况等信息。",
   "alert": "提示",
   "install": "安装",
-  "pleaseInstallText": "请先安装 polkadot 插件，并重启浏览器"
+  "pleaseInstallText": "请先安装 polkadot 插件，并重启浏览器",
+  "twitterShareText": "Khala将参与Kusama平行链卡槽拍卖，邀请你提前注册！填写我的邀请码将有额外奖励哦！"
 }
