--- a/src/i18n/zh.json
+++ b/src/i18n/zh.json
@@ -13,7 +13,7 @@
   "stakingTotal": "质押总量",
   "aboutKhala": "关于Phala",
   "aboutKhalaLink": "https://phala.network/zh/khala",
-  "learnSlotAuction": "了解卡槽拍卖",
+  "learnSlotAuction": "Khala竞拍策略",
   "learnSlotAuctionLink": "https://mp.weixin.qq.com/s/1iaLE_8Q2LjlgUsxW6LtWA",
   "affiliationProgram": "邀请奖励",
   "connectWallet": "连接钱包",
@@ -89,7 +89,7 @@
   "Fee": "手续费",
   "insufficientFee": "手续费不足",
   "referralRewardsSecond": "其次，您可以邀请您的他人来支持 Khala，如果 Khala 获胜，您将获得他们的支持奖励的 0.5％ 等值的奖励。您邀请多少个账户没有限制。",
-  "tweetToTellYourFriend": "发推告诉您的朋友",
+  "tweetToTellYourFriend": "发推邀请您的朋友",
   "generateMyReferalLink": "生成我的邀请链接",
   "yourReferrerCannotBeYourself": "不可绑定自己的地址",
   "process": "流程",
