--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -75,7 +75,7 @@
   "isAlreadySubscribed": "Email is already subscribed",
   "copySuccess": "Copy Success",
   "landingPageTitle": "Khala's Crowdloan Dapp is Coming!",
-  "landingPageDescription": "Please bookmark this page! Khala will open the Crowdloan on this page when the second Kusama slot is released.",
+  "landingPageDescription": "Please bookmark this page! Khala will open the Crowdloan on this page when the second auction is started.",
   "landingPageReferralRewards": "Referral Rewards",
   "subscribeToOurCrowdloanNews": "Subscribe to our Crowdloan news",
   "basicRewards": "Basic Rewards",
@@ -96,7 +96,7 @@
   "processT1": "Prep your KSM",
   "processC1": "Unbond your KSM soon if they’re already bonded! (At least 7 days before the Crowdloan starts.)",
   "processT2": "The 2nd slot",
-  "processC2": "Khala Network will join the slot auction when the second acution is started. As soon as the 2nd slot opens, you can join on this page.",
+  "processC2": "Khala Network will join the slot auction when the second slot is released. As soon as the 2nd slot opens, you can join on this page.",
   "processT3": "Khala wins auction",
   "processC3": "When Khala wins a slot and runs as parachain successfully, 34% of the PHA in the reward pool will vest and go to contributors’ addresses immediately. The remaining 66% will vest monthly over 11 months.",
   "processT4": "Unlock KSM",
