--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -95,8 +95,8 @@
   "process": "Process",
   "processT1": "Prep your KSM",
   "processC1": "Unbond your KSM soon if they’re already bonded! (At least 7 days before the Crowdloan starts.)",
-  "processT2": "The 2nd slot",
-  "processC2": "Khala Network will join the slot auction when the second auction is started. As soon as the 2nd slot opens, you can join on this page.",
+  "processT2": "The 2nd auction",
+  "processC2": "Khala Network will join the slot auction when the second auction is started. As soon as the 2nd auction opens, you can join on this page.",
   "processT3": "Khala wins auction",
   "processC3": "When Khala wins a slot and runs as parachain successfully, 34% of the PHA in the reward pool will vest and go to contributors’ addresses immediately. The remaining 66% will vest monthly over 11 months.",
   "processT4": "Unlock KSM",
