--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -41,6 +41,9 @@
   "yourTotalReward": "Your Total Reward",
   "participantsIntroduced": "Participants Introduced",
   "affiliationReward": "Affiliation Reward",
+  "affiliationRewardText": "In addition to the prize pool, introduce friends to help Khala, both of them will receive an affiliation reward. The participants shall not change the introducer after the first contribution.",
+  "yourIntroducer": "Your Introducer",
+  "Fill_in_the_introducer_to_get_extra_rewards": "Fill in the introducer to get extra rewards",
   "contributeDetails": "Contribute Details",
   "more": "More",
   "time": "Time",
