--- a/src/i18n/zh.json
+++ b/src/i18n/zh.json
@@ -16,6 +16,9 @@
   "learnSlotAuction": "Khala竞拍策略",
   "learnSlotAuctionLink": "https://mp.weixin.qq.com/s/1iaLE_8Q2LjlgUsxW6LtWA",
   "affiliationProgram": "邀请奖励",
+  "affiliationRewardText": "除支持奖励外，邀请好友来支持 Khala，双方都会获得被邀用户支持奖励的 0.5 % 作为额外邀请奖励。 被邀请人在第一次助拍后不得再更改邀请人。",
+  "yourIntroducer": "您的邀请人",
+  "Fill_in_the_introducer_to_get_extra_rewards": "填写邀请人，支持得额外奖励",
   "connectWallet": "连接钱包",
   "rank": "排名",
   "KSMAccount": "KSM账户",
