--- a/src/i18n/zh.json
+++ b/src/i18n/zh.json
@@ -153,5 +153,5 @@
   "alert": "提示",
   "install": "安装",
   "pleaseInstallText": "请先安装 polkadot 插件，并重启浏览器",
-  "twitterShareText": "Khala将参与Kusama平行链卡槽拍卖，邀请你提前注册！填写我的邀请码将有额外奖励哦！"
+  "twitterShareText": "Khala将参与Kusama平行链卡槽拍卖，邀请你提前注册！点击我的邀请链接将有额外奖励哦！"
 }
