--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -1,6 +1,6 @@
 {
   "success": "Success",
-  "locale": "English",
+  "locale": "En",
   "close": "Close",
   "cancel": "Cancel",
   "ok": "OK",
@@ -13,19 +13,19 @@
   "stakingTotal": "Staking Total",
   "aboutKhala": "About Khala",
   "aboutKhalaLink": "https://phala.network/khala",
-  "learnSlotAuction": "Khala's Auction Strategy",
+  "learnSlotAuction": "About Slot Auctions",
   "learnSlotAuctionLink": "https://medium.com/phala-network/phalas-kusama-slot-auction-strategy-34cb93e07f3a",
-  "affiliationProgram": "Affiliation Program",
+  "affiliationProgram": "Referral Rewards",
   "connectWallet": "Connect Wallet",
   "rank": "Rank",
   "KSMAccount": "KSM Account",
   "contribute": "Contribute",
   "contributeReward": "Contribute Reward",
   "myRanking": "My Ranking",
-  "enterAnContributeAmount": "Enter An Contribute Amount",
+  "enterAnContributeAmount": "Enter Crowdloan Contribution Amount",
   "balance": "Balance",
   "max": "Max",
-  "calculate": "Calculate",
+  "calculate": "Estimate",
   "contributingReward": "Contributing Reward",
   "contributingIncome": "Contributing Income",
   "phaPrice": "PHA Price",
