--- a/src/i18n/zh.json
+++ b/src/i18n/zh.json
@@ -11,9 +11,9 @@
   "accountNoticeAllowAccess": "请在Polkadot扩展允许访问账户。",
   "stakingRewardPool": "质押奖池",
   "stakingTotal": "质押总量",
-  "aboutKhala": "关于Phala",
+  "aboutKhala": "关于 Khala",
   "aboutKhalaLink": "https://phala.network/zh/khala",
-  "learnSlotAuction": "Khala竞拍策略",
+  "learnSlotAuction": "了解插槽拍卖",
   "learnSlotAuctionLink": "https://mp.weixin.qq.com/s/1iaLE_8Q2LjlgUsxW6LtWA",
   "affiliationProgram": "邀请奖励",
   "affiliationRewardText": "除支持奖励外，邀请好友来支持 Khala，双方都会获得被邀用户支持奖励的 0.5 % 作为额外邀请奖励。 被邀请人在第一次助拍后不得再更改邀请人。",
@@ -25,10 +25,10 @@
   "contribute": "质押量",
   "contributeReward": "质押奖励",
   "myRanking": "我的排名",
-  "enterAnContributeAmount": "输入质押量",
+  "enterAnContributeAmount": "输入支持量",
   "balance": "余额",
   "max": "最大",
-  "calculate": "计算",
+  "calculate": "预估",
   "contributingReward": "为PHA质押奖励",
   "contributingIncome": "为Phala质押收益",
   "phaPrice": "PHA价格",
