--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -39,15 +39,15 @@
   "introducer": "Invitor",
   "fillIntroducer": "Fill in the introducer to get %d PHA additional reward",
   "yourTotalReward": "Your Total Reward",
-  "participantsIntroduced": "Participants Introduced",
-  "affiliationReward": "Affiliation Reward",
+  "participantsIntroduced": "Participants Referred",
+  "affiliationReward": "Referral Rewards",
   "affiliationRewardText": "In addition to the prize pool, introduce friends to help Khala, both of them will receive an affiliation reward. The participants shall not change the introducer after the first contribution.",
   "yourIntroducer": "Your Introducer",
   "Fill_in_the_introducer_to_get_extra_rewards": "Fill in the introducer to get extra rewards",
   "contributeDetails": "Contribute Details",
   "more": "More",
   "time": "Time",
-  "yourContribute": "Your Contribute",
+  "yourContribute": "Your Contribution",
   "yourReward": "Your Reward",
   "rewardVest": "Reward Vest",
   "rewardVestTip": "If Phala wins the Slot Auction, rewards will be distributed according to the following time points and proportions. If it fails, you can unbond all your bonds immediately after the Auction ends.",
@@ -67,7 +67,7 @@
   "priceLastUpdated": "Price last updated: ",
   "coinGechoLink": "https://www.coingecko.com/en/coins/phala-network",
   "stakingrewardsLink": "https://www.stakingrewards.com/earn/kusama",
-  "pleaseSupportAtLeast": "Please support at least 0.1 KSM",
+  "pleaseSupportAtLeast": "Please contribute at least 0.1 KSM",
   "transactionConfirmationTitle": "Transaction Confirmation",
   "seeDetailsToLearnMore": "See details to learn more",
   "sending...": "Sending...",
