--- a/src/i18n/zh.json
+++ b/src/i18n/zh.json
@@ -47,7 +47,7 @@
   "contributeDetails": "质押明细",
   "more": "查看全部",
   "time": "时间",
-  "yourContribute": "您的质押",
+  "yourContribute": "您的支持量",
   "yourReward": "您的奖励",
   "rewardVest": "结算发放",
   "rewardVestTip": "如果Phala在本期拍卖中赢得卡槽，将按如下时间点及比例发放奖励。如果失败，您可以在拍卖结束后立即全部解锁您的质押。",
