--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -44,7 +44,7 @@
   "affiliationRewardText": "In addition to the prize pool, introduce friends to help Khala, both of them will receive an affiliation reward. The participants shall not change the introducer after the first contribution.",
   "yourIntroducer": "Your Introducer",
   "Fill_in_the_introducer_to_get_extra_rewards": "Fill in the introducer to get extra rewards",
-  "contributeDetails": "Contribute Details",
+  "contributeDetails": "Contribution Details",
   "more": "More",
   "time": "Time",
   "yourContribute": "Your Contribution",
@@ -56,12 +56,12 @@
   "khalaBid": "Khala Bid",
   "phalaBid": "Phala Bid",
   "noMoreReward": "No more reward.",
-  "calculatePopInfo1": "Contributing Reward : Stake KSM to contribute Khala's PHA rewards",
+  "calculatePopInfo1": "Contribution Reward：Stake KSM to contribute Khala's PHA rewards",
   "calculatePopInfo2": "PHA Price、KSM APY、KSM Price：Default current market data, editable",
-  "calculatePopInfo3": "Contributing Income = Contributing Reward * PHA Price",
-  "calculatePopInfo4": "Staking Reward = KSM Contribution * KSM APY",
-  "calculatePopInfo5": "Staking Income = Staking Reward * KSM Price",
-  "calculatePopInfo6": "More Income = Contributing Income - Staking Income",
+  "calculatePopInfo3": "Reward Income = Contribution Reward*PHA Price",
+  "calculatePopInfo4": "Staking Reward = KSM Contribution*Kusama staking APY",
+  "calculatePopInfo5": "Staking Income = Staking Reward*KSM Price",
+  "calculatePopInfo6": "Increase in Gains = Reward Income-Staking Income",
   "dataSource": "Data source",
   "lastUpdated": "Last updated: ",
   "priceLastUpdated": "Price last updated: ",
