--- a/src/i18n/zh.json
+++ b/src/i18n/zh.json
@@ -44,7 +44,7 @@
   "yourTotalReward": "您的总奖励",
   "participantsIntroduced": "邀请人数",
   "affiliationReward": "邀请奖励",
-  "contributeDetails": "质押明细",
+  "contributeDetails": "支持明细",
   "more": "查看全部",
   "time": "时间",
   "yourContribute": "您的支持量",
@@ -56,12 +56,12 @@
   "khalaBid": "当前Khala出价",
   "phalaBid": "当前Phala出价",
   "noMoreReward": "到达奖励软顶，之后的支持没有奖励",
-  "calculatePopInfo1": "支持奖励：抵押 KSM 支持 Khala 可获得的 PHA 奖励",
+  "calculatePopInfo1": "支持奖励：质押 KSM 支持 Khala 可获得的 PHA 奖励",
   "calculatePopInfo2": "PHA 价格、KSM 年化、KSM 价格：默认当前市场数据，可编辑",
   "calculatePopInfo3": "支持收益 = 支持 Khala 奖励 * PHA 价格",
   "calculatePopInfo4": "KSM 抵押奖励 = 支持的 KSM * KSM 年化",
   "calculatePopInfo5": "KSM 抵押收益 = KSM 抵押奖励 * KSM 价格",
-  "calculatePopInfo6": "额外收益 = 支持收益 - 抵押收益",
+  "calculatePopInfo6": "收益增加 = 支持收益 - 抵押收益",
   "dataSource": "数据来源",
   "priceLastUpdated": "价格最后更新: ",
   "lastUpdated": "最后更新: ",
