--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -4,10 +4,11 @@
   "close": "Close",
   "cancel": "Cancel",
   "ok": "OK",
-  "noData": "No data",
+  "noData": "You have not contributed Khala in this crowdloan",
   "accounts": "Accounts",
+  "PleaseConnectWallet": "Please Connect Wallet",
   "selectAnAccount": "Select An Account",
-  "accountNoticeAddAccount": "Please import/create accounts in the Polkadot extension.",
+  "accountNoticeAddAccount": "No account found, please add account in your wallet extension or unlock it",
   "accountNoticeAllowAccess": "Please allow access in the Polkadot extension.",
   "stakingRewardPool": "Staking Reward Pool",
   "stakingTotal": "Staking Total",
@@ -26,18 +27,18 @@
   "balance": "Balance",
   "max": "Max",
   "calculate": "Estimate",
-  "contributingReward": "Contributing Reward",
-  "contributingIncome": "Contributing Income",
+  "contributingReward": "Contribution Reward",
+  "contributingIncome": "Reward Income",
   "phaPrice": "PHA Price",
   "stake": "Stake",
-  "phalaStakeAPY": "Phala Stake APY",
-  "KSMAPY": "KSM APY",
+  "phalaStakeAPY": "PHA Reward APY",
+  "KSMAPY": "KSM Staking APY",
   "KSMPrice": "KSM Price",
   "stakingReward": "Staking Reward",
   "stakingIncome": "Staking Income",
   "moreIncome": "More Income than Staking",
   "introducer": "Invitor",
-  "fillIntroducer": "Fill in the introducer to get %d PHA additional reward",
+  "fillIntroducer": "Fill in your referrer to get %d PHA additional reward (optional)",
   "yourTotalReward": "Your Total Reward",
   "participantsIntroduced": "Participants Referred",
   "affiliationReward": "Referral Rewards",
@@ -47,10 +48,10 @@
   "contributeDetails": "Contribution Details",
   "more": "More",
   "time": "Time",
-  "yourContribute": "Your Contribution",
-  "yourReward": "Your Reward",
-  "rewardVest": "Reward Vest",
-  "rewardVestTip": "If Phala wins the Slot Auction, rewards will be distributed according to the following time points and proportions. If it fails, you can unbond all your bonds immediately after the Auction ends.",
+  "yourContribute": "Contribution",
+  "yourReward": "Reward",
+  "rewardVest": "Reward Vesting",
+  "rewardVestTip": "If Phala wins the Slot Auction, rewards will be distributed according to the following payment schedule. If a slot is not won, you can unbond your KSM immediately after the Auctions end.",
   "heightestBid": "Highest Bid",
   "averageBid": "Average Bid",
   "khalaBid": "Khala Bid",
@@ -152,6 +153,6 @@
   "a16": "After the Crowdloan starts, you'll be able to see Khala's Crowdloan total, crowd lenders, total rewards, the current bidding situation, and other information, all on this page.",
   "alert": "Alert",
   "install": "Install",
-  "pleaseInstallText": "Please install polkadot extension and restart browser",
-  "twitterShareText": "Khala's participating in the Kusama Parachain Slot Auctions, and you're invited to join in! We'll both get extra rewards if you use my invite link."
+  "pleaseInstallText": "No polkadot{.js} extension found, please install it first",
+  "twitterShareText": "Support Khala's Crowdloan in the Kusama Parachain Slot Auction! Each $KSM contributed will earn 100 $PHA on a slot win! Invite friends to net an extra 0.5% reward for you AND your friend! Click the link below to participate!"
 }
