--- a/src/i18n/zh.json
+++ b/src/i18n/zh.json
@@ -4,10 +4,11 @@
   "close": "关闭",
   "cancel": "取消",
   "ok": "确定",
-  "noData": "暂无数据",
+  "noData": "本期众贷您还没有支持 Khala",
   "accounts": "账户",
+  "PleaseConnectWallet": "请先连接钱包",
   "selectAnAccount": "选择账户",
-  "accountNoticeAddAccount": "请在Polkadot扩展中添加账户。",
+  "accountNoticeAddAccount": "未发现账号，请在您的 polkadot{.js} 插件中添加或恢复账号",
   "accountNoticeAllowAccess": "请在Polkadot扩展允许访问账户。",
   "stakingRewardPool": "质押奖池",
   "stakingTotal": "质押总量",
@@ -29,28 +30,28 @@
   "balance": "余额",
   "max": "最大",
   "calculate": "预估",
-  "contributingReward": "为PHA质押奖励",
-  "contributingIncome": "为Phala质押收益",
-  "phaPrice": "PHA价格",
+  "contributingReward": "支持奖励",
+  "contributingIncome": "支持收益",
+  "phaPrice": "PHA Price价格",
   "stake": "质押",
-  "phalaStakeAPY": "Phala质押年化",
-  "KSMAPY": "KSM质押年化",
-  "KSMPrice": "KSM价格",
-  "stakingReward": "KSM抵押奖励",
-  "stakingIncome": "KSM抵押收益",
+  "phalaStakeAPY": "PHA 众贷奖励年化",
+  "KSMAPY": "KSM 节点抵押年化",
+  "KSMPrice": "KSM 价格",
+  "stakingReward": "KSM 抵押奖励",
+  "stakingIncome": "KSM 抵押收益",
   "moreIncome": "超抵押收益",
   "introducer": "邀请人",
-  "fillIntroducer": "绑定邀请人获得 %d PHA额外奖励（选填）",
+  "fillIntroducer": "绑定邀请人获得 %d PHA 额外奖励（选填）",
   "yourTotalReward": "您的总奖励",
   "participantsIntroduced": "邀请人数",
   "affiliationReward": "邀请奖励",
   "contributeDetails": "支持明细",
   "more": "查看全部",
   "time": "时间",
-  "yourContribute": "您的支持量",
+  "yourContribute": "您的支持",
   "yourReward": "您的奖励",
-  "rewardVest": "结算发放",
-  "rewardVestTip": "如果Phala在本期拍卖中赢得卡槽，将按如下时间点及比例发放奖励。如果失败，您可以在拍卖结束后立即全部解锁您的质押。",
+  "rewardVest": "奖励释放",
+  "rewardVestTip": "如果Phala在本期拍卖中赢得插槽，将按如下计划释放奖励。如果失败，您可以在拍卖结束后立即全部解锁您的质押。",
   "heightestBid": "最高出价",
   "averageBid": "平均出价",
   "khalaBid": "当前Khala出价",
@@ -152,6 +153,6 @@
   "a16": "众贷开始后，你可以在本面板中看到 Khala 的众贷数量、众贷人数、总获得奖励、当前竞拍情况等信息。",
   "alert": "提示",
   "install": "安装",
-  "pleaseInstallText": "请先安装 polkadot 插件，并重启浏览器",
-  "twitterShareText": "Khala将参与Kusama平行链卡槽拍卖，邀请你提前注册！点击我的邀请链接将有额外奖励哦！"
+  "pleaseInstallText": "无 polkadot{.js} 插件，请先安装",
+  "twitterShareText": "邀请你来支持Khala平行链卡槽拍卖！在Khala众贷中每贡献1枚KSM将收获100PHA奖励，成功邀请好友贡献还将获得额外0.5%奖励。点击下方邀请链接立即参与！"
 }
