--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -1,4 +1,6 @@
 {
+  "APY": "APY",
+  "Stake": "Stake",
   "success": "Success",
   "locale": "En",
   "close": "Close",
@@ -10,7 +12,7 @@
   "selectAnAccount": "Select An Account",
   "accountNoticeAddAccount": "No account found, please add account in your wallet extension or unlock it",
   "accountNoticeAllowAccess": "Please allow access in the Polkadot extension.",
-  "stakingRewardPool": "Staking Reward Pool",
+  "stakingRewardPool": "Khala Crowdloan Contributed",
   "stakingTotal": "Staking Total",
   "aboutKhala": "About Khala",
   "aboutKhalaLink": "https://phala.network/khala",
@@ -37,7 +39,7 @@
   "stakingReward": "Staking Reward",
   "stakingIncome": "Staking Income",
   "moreIncome": "More Income than Staking",
-  "introducer": "Invitor",
+  "introducer": "Referred by",
   "fillIntroducer": "Fill in your referrer to get %d PHA additional reward (optional)",
   "yourTotalReward": "Your Total Reward",
   "participantsIntroduced": "Participants Referred",
