--- a/src/i18n/zh.json
+++ b/src/i18n/zh.json
@@ -1,4 +1,7 @@
 {
+  "APY": "年化",
+  "Stake": "抵押率",
+  "Price": "价格",
   "success": "成功",
   "locale": "中文",
   "close": "关闭",
@@ -10,7 +13,7 @@
   "selectAnAccount": "选择账户",
   "accountNoticeAddAccount": "未发现账号，请在您的 polkadot{.js} 插件中添加或恢复账号",
   "accountNoticeAllowAccess": "请在Polkadot扩展允许访问账户。",
-  "stakingRewardPool": "质押奖池",
+  "stakingRewardPool": "Khala 众贷量",
   "stakingTotal": "质押总量",
   "aboutKhala": "关于 Khala",
   "aboutKhalaLink": "https://phala.network/zh/khala",
@@ -54,7 +57,7 @@
   "rewardVestTip": "如果Phala在本期拍卖中赢得插槽，将按如下计划释放奖励。如果失败，您可以在拍卖结束后立即全部解锁您的质押。",
   "heightestBid": "最高出价",
   "averageBid": "平均出价",
-  "khalaBid": "当前Khala出价",
+  "khalaBid": "当前 Khala 出价",
   "phalaBid": "当前Phala出价",
   "noMoreReward": "到达奖励软顶，之后的支持没有奖励",
   "calculatePopInfo1": "支持奖励：质押 KSM 支持 Khala 可获得的 PHA 奖励",
