--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -39,7 +39,7 @@
   "KSMPrice": "KSM Price",
   "stakingReward": "Staking Reward",
   "stakingIncome": "Staking Income",
-  "moreIncome": "More Income than Staking",
+  "moreIncome": "Increase in Gains relative to Staking",
   "introducer": "Referred by",
   "fillIntroducer": "Fill in your referrer to get %d PHA additional reward (optional)",
   "yourTotalReward": "Your Total Reward",
