--- a/src/i18n/zh.json
+++ b/src/i18n/zh.json
@@ -43,7 +43,7 @@
   "KSMPrice": "KSM 价格",
   "stakingReward": "KSM 抵押奖励",
   "stakingIncome": "KSM 抵押收益",
-  "moreIncome": "超抵押收益",
+  "moreIncome": "收益增加",
   "introducer": "邀请人",
   "fillIntroducer": "绑定邀请人获得 %d PHA 额外奖励（选填）",
   "yourTotalReward": "您的总奖励",
