--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -22,9 +22,9 @@
   "affiliationProgram": "Referral Rewards",
   "connectWallet": "Connect Wallet",
   "rank": "Rank",
-  "KSMAccount": "KSM Account",
-  "contribute": "Contribute",
-  "contributeReward": "Contribute Reward",
+  "KSMAccount": "Kusama Account",
+  "contribute": "Contributed",
+  "contributeReward": "Contribution Reward",
   "myRanking": "My Ranking",
   "enterAnContributeAmount": "Enter Crowdloan Contribution Amount",
   "balance": "Balance",
@@ -44,8 +44,8 @@
   "fillIntroducer": "Fill in your referrer to get %d PHA additional reward (optional)",
   "yourTotalReward": "Your Total Reward",
   "participantsIntroduced": "Participants Referred",
-  "affiliationReward": "Referral Rewards",
-  "affiliationRewardText": "In addition to the prize pool, introduce friends to help Khala, both of them will receive an affiliation reward. The participants shall not change the introducer after the first contribution.",
+  "affiliationReward": "Referral Reward",
+  "affiliationRewardText": "When participants invite others who contribute, each will receive an additional reward: an extra 0.5% on the additional contribution. The participants may not change the referrer after the first contribution.",
   "yourIntroducer": "Your Introducer",
   "Fill_in_the_introducer_to_get_extra_rewards": "Fill in the introducer to get extra rewards",
   "contributeDetails": "Contribution Details",
