--- a/src/i18n/zh.json
+++ b/src/i18n/zh.json
@@ -21,14 +21,14 @@
   "learnSlotAuction": "了解插槽拍卖",
   "learnSlotAuctionLink": "https://mp.weixin.qq.com/s/1iaLE_8Q2LjlgUsxW6LtWA",
   "affiliationProgram": "邀请奖励",
-  "affiliationRewardText": "除支持奖励外，邀请好友来支持 Khala，双方都会获得被邀用户支持奖励的 0.5 % 作为额外邀请奖励。 被邀请人在第一次助拍后不得再更改邀请人。",
+  "affiliationRewardText": "除支持奖励外，邀请好友来支持 Khala，双方都会获得被邀用户支持奖励的 0.5 % 作为额外邀请奖励。 被邀请人在第一次支持后不得再更改邀请人。",
   "yourIntroducer": "您的邀请人",
   "Fill_in_the_introducer_to_get_extra_rewards": "填写邀请人，支持得额外奖励",
   "connectWallet": "连接钱包",
   "rank": "排名",
-  "KSMAccount": "KSM账户",
-  "contribute": "质押量",
-  "contributeReward": "质押奖励",
+  "KSMAccount": "Kusama 账户",
+  "contribute": "支持量",
+  "contributeReward": "支持奖励",
   "myRanking": "我的排名",
   "enterAnContributeAmount": "输入支持量",
   "balance": "余额",
