--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -1,4 +1,5 @@
 {
+  "Price": "Price",
   "PleaseConfirm": "Please Confirm",
   "StakeActionSection.ToContribute": "To Contribute",
   "APY": "APY",
