--- a/src/i18n/zh.json
+++ b/src/i18n/zh.json
@@ -1,4 +1,5 @@
 {
+  "InvitorInfoModal.softTop": "已到达奖励软顶，支持不再有奖励",
   "PleaseConfirm": "请您确认",
   "StakeActionSection.ToContribute": "去支持",
   "APY": "年化",
