--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -1,4 +1,5 @@
 {
+  "InvitorInfoModal.softTop": "There has no more PHA that can be distributed to contributors.",
   "Price": "Price",
   "PleaseConfirm": "Please Confirm",
   "StakeActionSection.ToContribute": "To Contribute",
@@ -28,7 +29,7 @@
   "contribute": "Contributed",
   "contributeReward": "Contribution Reward",
   "myRanking": "My Ranking",
-  "enterAnContributeAmount": "Enter Crowdloan Contribution Amount",
+  "enterAnContributeAmount": "Enter Contribution Amount",
   "balance": "Balance",
   "max": "Max",
   "calculate": "Estimate",
